--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -23,10 +23,12 @@
     "@hono/node-server": "^1.19.7",
     "@sidecar/shared": "workspace:*",
     "hono": "^4.11.3",
+    "web-push": "^3.6.7",
     "ws": "^8.18.0"
   },
   "devDependencies": {
     "@types/node": "^22.0.0",
+    "@types/web-push": "^3.6.4",
     "@types/ws": "^8.5.0",
     "tsx": "^4.0.0",
     "typescript": "^5.0.0"
