--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -32,6 +32,7 @@
     "tailwindcss": "^3.4.0",
     "typescript": "^5.0.0",
     "vite": "^5.4.0",
-    "vite-plugin-pwa": "^0.20.0"
+    "vite-plugin-pwa": "^0.20.0",
+    "workbox-precaching": "^7.4.0"
   }
 }
